deploy/api-gateway/deployment-api-gateway.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: asw-project
  labels:
    app: instagnam
    service: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: instagnam
      service: api-gateway
  template:
    metadata:
      labels:
        app: instagnam
        service: api-gateway
    spec:
      containers:
      - name: asw-api-gateway
        image: cmik/api-gateway:1.1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
