deploy/api-gateway/service-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: asw-project
spec:
  type: NodePort
  selector:
    app: instagnam
    service: api-gateway
  ports:
  - name: web-interface
    protocol: TCP
    port: 8080
    targetPort: 8080
  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: instagnam
  namespace: asw-project
spec:
 rules:
 - host: instagnam
   http:
    paths:
    - path: /
      backend:
        serviceName: api-gateway-service
        servicePort: 8080
